[package]
name = "eth-reaper"
version = "0.0.2"
authors = ["Maxim Fischuk"]
edition = "2018"

[[bin]]
name = "ethereum-poller"
path = "./src/main.rs"

[dependencies]
log = "0.4.8"
fern = "0.5.9"
chrono = "0.4.10"
tokio = "0.2.0-alpha.6"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
clap = "2.33.0"
structopt = "0.3.5"
config = "0.9.3"
serde_derive = "1.0.102"
serde = "1.0.102"
serde_json = "1.0.41"
serde_bytes = "0.11.2"
serde_regex = "0.4.0"
zookeeper = "0.5.7"
futures = "0.3.1"
signal-hook = "0.1.11"
ethbloom = "0.6.4"
hex-serde = "0.1.0"
hex = "0.4.0"
rdkafka = { version = "0.23.1", features = ["cmake-build", "ssl", "gssapi"] }
regex = "1.3.4"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
panic = 'unwind'
incremental = false
overflow-checks = false

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
