[package]
name = "eth-reaper"
version = "0.0.3"
authors = ["Maxim Fischuk"]
edition = "2018"

[[bin]]
name = "ethereum-poller"
path = "./src/main.rs"

[dependencies]
log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.11"
tokio = "0.2.21"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
clap = "2.33.1"
structopt = "0.3.15"
config = "0.10.1"
serde_derive = "1.0.114"
serde = "1.0.114"
serde_json = "1.0.55"
serde_bytes = "0.11.5"
serde_regex = "1.1.0"
serde_cbor = "0.11.1"
derivative = "2.1.1"
zookeeper = "0.5.9"
futures = "0.3.5"
signal-hook = "0.1.16"
ethbloom = "0.9.2"
hex-serde = "0.1.0"
hex = "0.4.2"
rdkafka = { version = "0.23.1", features = ["cmake-build", "ssl", "gssapi"] }
regex = "1.3.9"
jsonpath = "0.1.1"
crossbeam-utils = "0.7.2"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
panic = 'unwind'
incremental = false
overflow-checks = false

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
